--- a/config_sample.env
+++ b/config_sample.env
@@ -9,7 +9,7 @@ BOT_TOKEN = ""
 
 # Update
 UPSTREAM_REPO = "https://github.com/Dawn-India/Z-Mirror"
-UPSTREAM_BRANCH = "main"
+UPSTREAM_BRANCH = "zh_run"
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""
