--- a/config.env
+++ b/config.env
@@ -1,9 +1,9 @@
 
 # REQUIRED CONFIG
-OWNER_ID = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
-BOT_TOKEN = ""
+OWNER_ID = "1361989901"
+TELEGRAM_API = "5833392"
+TELEGRAM_HASH = "e8251a5086cc64c2441188ec71a00bf2"
+BOT_TOKEN = "5545564044:AAHQTaDVGfu7dKTlxQkulfZizHrjsvBzuJ0"
 
 # Update
 UPSTREAM_REPO = "https://github.com/Dawn-India/Z-Mirror"
@@ -11,10 +11,10 @@ UPSTREAM_BRANCH = "zh_run"
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""
-DATABASE_URL = ""
+DATABASE_URL = "mongodb+srv://animeace494:lo9aTeAWRQqYktLc@cluster0.0msx5bo.mongodb.net/?retryWrites=true&w=majority"
 DOWNLOAD_DIR = "/usr/src/app/downloads/"
 CMD_SUFFIX = ""  
-AUTHORIZED_CHATS = ""   
+AUTHORIZED_CHATS = "-1001607131568"   
 SUDO_USERS = ""  
 STATUS_LIMIT = "5"
 DEFAULT_UPLOAD = "gd"
@@ -46,7 +46,7 @@ AS_DOCUMENT = "False"
 EQUAL_SPLITS = "False"
 MEDIA_GROUP = "True"
 LEECH_FILENAME_PREFIX = ""
-DUMP_CHAT_ID = ""
+DUMP_CHAT_ID = "-1001606879661"
 
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = "30"
