--- a/config.env
+++ b/config.env
@@ -11,7 +11,7 @@ UPSTREAM_BRANCH = "zh_run"
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""
-DATABASE_URL = "mongodb+srv://animeace494:lo9aTeAWRQqYktLc@cluster0.0msx5bo.mongodb.net/?retryWrites=true&w=majority"
+DATABASE_URL = "postgres://qxplosfn:bQ19KlzxbGzvpoaS3avK8pcBlcJGavy_@balarama.db.elephantsql.com/qxplosfn"
 DOWNLOAD_DIR = "/usr/src/app/downloads/"
 CMD_SUFFIX = ""  
 AUTHORIZED_CHATS = "-1001607131568"   
