--- a/config.env
+++ b/config.env
@@ -6,7 +6,7 @@ TELEGRAM_HASH = "e8251a5086cc64c2441188ec71a00bf2"
 BOT_TOKEN = "5545564044:AAHQTaDVGfu7dKTlxQkulfZizHrjsvBzuJ0"
 
 # Update
-UPSTREAM_REPO = "https://github.com/Dawn-India/Z-Mirror"
+UPSTREAM_REPO = "https://gitlab.com/Dawn-India/Z-Mirror"
 UPSTREAM_BRANCH = "zh_run"
 
 # OPTIONAL CONFIG
