--- a/config.env
+++ b/config.env
@@ -50,7 +50,7 @@ DUMP_CHAT_ID = "-1001606879661"
 
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = "30"
-BASE_URL = ""
+BASE_URL = "https://macroleechcapibo.herokuapp.com"
 BASE_URL_PORT = ""
 WEB_PINCODE = "False"
 
